tested helm command

--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -273,7 +273,7 @@ jobs:
         env:
           IMAGE_TAG: ${{ needs.define-vairables.outputs.commit }}
         run: |
-          echo "${{ secrets.GCP_ACCOUNT_KEY }}" | helm registry login ${{ inputs.HELM_REGISTRY }} --username ${{ secrets.GCP_ACCOUNT_USER }} --password-stdin
+          echo "${{ secrets.HELM_REGISTRY_KEY }}" | helm registry login ${{ inputs.HELM_REGISTRY }} --username ${{ inputs.GCP_ACCOUNT_USER }} --password-stdin
 
           if ! helm -n ${{ inputs.HELM_NAMESPACE }} upgrade --install ${{ github.event.repository.name }} --wait '--timeout=${{ inputs.HELM_ROLLOUT_TIMEOUT }}' -f ${{ inputs.HELM_REPOSITORY }}/${{ inputs.HELM_VALUES }} --set-string image.tag="${IMAGE_TAG}" oci://${{ inputs.HELM_REGISTRY }}/${{ inputs.HELM_CHART }} --version ${{ inputs.HELM_CHART_VERSION }}; then
             kubectl -n ${{ inputs.HELM_NAMESPACE }} describe po -l app.kubernetes.io/version=${IMAGE_TAG} -l app.kubernetes.io/name=${{ github.event.repository.name }}
@@ -323,7 +323,7 @@ jobs:
         env:
           VERSION_TAG: ${{ needs.define-vairables.outputs.version }}
         run: |
-          echo "${{ secrets.GCP_ACCOUNT_KEY }}" | helm registry login ${{ inputs.HELM_REGISTRY }} --username ${{ secrets.GCP_ACCOUNT_USER }} --password-stdin
+          echo "${{ secrets.HELM_REGISTRY_KEY }}" | helm registry login ${{ inputs.HELM_REGISTRY }} --username ${{ inputs.GCP_ACCOUNT_USER }} --password-stdin
 
           if ! helm -n ${{ inputs.HELM_NAMESPACE }} upgrade --install ${{ github.event.repository.name }} --wait '--timeout=${{ inputs.HELM_ROLLOUT_TIMEOUT }}' -f ${{ inputs.HELM_REPOSITORY }}/${{ inputs.HELM_VALUES }} --set-string image.tag="${VERSION_TAG}"  ${{ secrets.HELM_REPOSITORY }}/${{ inputs.HELM_CHART }} --version ${{ inputs.HELM_CHART_VERSION }}; then
             kubectl -n ${{ inputs.HELM_NAMESPACE }} describe po -l app.kubernetes.io/version=${IMAGE_TAG} -l app.kubernetes.io/name=${{ github.event.repository.name }}
