--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -60,6 +60,11 @@ on:
       README_URL:
         type: string
         required: true
+    secrets:
+      ACTIONS_SSH_KEY:
+        required: true
+      GCP_ACCOUNT_KEY:
+        required: true
 env:
   GITHUB_REPO_USERNAME: ${{ secrets.GITHUB_REPO_USERNAME }}
   GITHUB_REPO_PASSWORD: ${{ secrets.GITHUB_REPO_PASSWORD }}
@@ -221,12 +226,15 @@ jobs:
       - name: Maven Package
         run: mvn -B clean package -DskipTests -Dspotbugs.skip=true --settings .github/settings.xml
 
+      - name: Gcloud Authentication
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json:  ${{ secrets.GCP_ACCOUNT_KEY }}
+
       - name: Setup gcloud CLI
         uses: google-github-actions/setup-gcloud@v0
         with:
           version: '297.0.0'
-          service_account_email: ${{ secrets.GCP_ACCOUNT_EMAIL }}
-          service_account_key: ${{ secrets.GCP_ACCOUNT_KEY }}
       
       - name: Configure the docker credentials   
         run: |
@@ -258,12 +266,15 @@ jobs:
           ref: ${{ inputs.GITHUB_BRANCH }}
           ssh-key: '${{ secrets.ACTIONS_SSH_KEY }}'
 
+      - name: Gcloud Authentication
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json:  ${{ secrets.GCP_ACCOUNT_KEY }}
+
       - name: Setup gcloud CLI
         uses: google-github-actions/setup-gcloud@v0
         with:
           version: '297.0.0'
-          service_account_email: ${{ secrets.GCP_ACCOUNT_EMAIL }}
-          service_account_key: ${{ secrets.GCP_ACCOUNT_KEY }}
       
       - name: Configure the docker credentials   
         run: |
@@ -276,56 +287,6 @@ jobs:
           echo "${{ secrets.HELM_REGISTRY_KEY }}" | helm registry login ${{ inputs.HELM_REGISTRY }} --username ${{ inputs.GCP_ACCOUNT_USER }} --password-stdin
 
           if ! helm -n ${{ inputs.HELM_NAMESPACE }} upgrade --install ${{ github.event.repository.name }} --wait '--timeout=${{ inputs.HELM_ROLLOUT_TIMEOUT }}' -f ${{ inputs.HELM_REPOSITORY }}/${{ inputs.HELM_VALUES }} --set-string image.tag="${IMAGE_TAG}" oci://${{ inputs.HELM_REGISTRY }}/${{ inputs.HELM_CHART }} --version ${{ inputs.HELM_CHART_VERSION }}; then
-            kubectl -n ${{ inputs.HELM_NAMESPACE }} describe po -l app.kubernetes.io/version=${IMAGE_TAG} -l app.kubernetes.io/name=${{ github.event.repository.name }}
-            kubectl -n ${{ inputs.HELM_NAMESPACE }} logs --tail=2000 -l app.kubernetes.io/version=${IMAGE_TAG} -l app.kubernetes.io/name=${{ github.event.repository.name }} --all-containers || true
-            helm -n ${{ inputs.HELM_NAMESPACE }} rollback ${{ github.event.repository.name }} 0
-            exit 1
-          fi
-
-  deploy-production:
-    if: github.ref == 'refs/tags/**'
-    name: Deploy to production
-    runs-on: ubuntu-20.04
-    needs: ["define-vairables"]
-    steps:
-      - uses: actions/checkout@v1
-
-      - uses: actions/checkout@v2
-        with:
-          repository: '${{ inputs.GITHUB_ORG }}/${{ inputs.HELM_REPOSITORY }}'
-          path: ${{ inputs.HELM_REPOSITORY }}
-          ref: ${{ inputs.GITHUB_BRANCH}}
-          ssh-key: '${{ secrets.ACTIONS_SSH_KEY }}'
-
-      - name: Setup gcloud CLI
-        uses: google-github-actions/setup-gcloud@v0
-        with:
-          version: '297.0.0'
-          service_account_email: ${{ secrets.GCP_ACCOUNT_EMAIL }}
-          service_account_key: ${{ secrets.GCP_ACCOUNT_KEY }}
-
-      - name: Configure the docker credentials   
-        run: |
-          gcloud auth configure-docker --quiet
-          gcloud container clusters get-credentials ${{ inputs.GKE_NAME }} --zone ${{ inputs.GKE_ZONE }} --project ${{ inputs.GKE_PROJECT }}
-
-      - name: Download and retag application Docker image
-        id: retag-image
-        env:
-          IMAGE_TAG: ${{ needs.define-vairables.outputs.commit }}
-          VERSION_TAG: ${{ needs.define-vairables.outputs.version }} 
-        run: |
-          docker pull ${{ inputs.GCR_REGISTRY }}}/${{ inputs.GCR_REPOSITORY }}:${IMAGE_TAG}
-          docker image tag ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${IMAGE_TAG} ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${VERSION_TAG}
-          docker push ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${VERSION_TAG}
-    
-      - name: Deploy to K8S
-        env:
-          VERSION_TAG: ${{ needs.define-vairables.outputs.version }}
-        run: |
-          echo "${{ secrets.HELM_REGISTRY_KEY }}" | helm registry login ${{ inputs.HELM_REGISTRY }} --username ${{ inputs.GCP_ACCOUNT_USER }} --password-stdin
-
-          if ! helm -n ${{ inputs.HELM_NAMESPACE }} upgrade --install ${{ github.event.repository.name }} --wait '--timeout=${{ inputs.HELM_ROLLOUT_TIMEOUT }}' -f ${{ inputs.HELM_REPOSITORY }}/${{ inputs.HELM_VALUES }} --set-string image.tag="${VERSION_TAG}"  ${{ secrets.HELM_REPOSITORY }}/${{ inputs.HELM_CHART }} --version ${{ inputs.HELM_CHART_VERSION }}; then
             kubectl -n ${{ inputs.HELM_NAMESPACE }} describe po -l app.kubernetes.io/version=${IMAGE_TAG} -l app.kubernetes.io/name=${{ github.event.repository.name }}
             kubectl -n ${{ inputs.HELM_NAMESPACE }} logs --tail=2000 -l app.kubernetes.io/version=${IMAGE_TAG} -l app.kubernetes.io/name=${{ github.event.repository.name }} --all-containers || true
             helm -n ${{ inputs.HELM_NAMESPACE }} rollback ${{ github.event.repository.name }} 0
