--- a/.github/workflows/java-release.yml
+++ b/.github/workflows/java-release.yml
@@ -69,6 +69,7 @@ on:
 env:
   GITHUB_REPO_USERNAME: ${{ secrets.GITHUB_REPO_USERNAME }}
   GITHUB_REPO_PASSWORD: ${{ secrets.GITHUB_REPO_PASSWORD }}
+  HELM_EXPERIMENTAL_OCI: 1
 
 jobs: 
   define-vairables:
