added helm registry secret

--- a/.github/workflows/node-master.yml
+++ b/.github/workflows/node-master.yml
@@ -49,6 +49,8 @@ on:
         type: string
         required: true
     secrets:
+      HELM_REGISTRY_KEY:
+        required: true
       GH_TOKEN:
         required: true
       ACTIONS_SSH_KEY:
