--- a/.github/workflows/java-release.yml
+++ b/.github/workflows/java-release.yml
@@ -61,9 +61,13 @@ on:
         type: string
         required: true
     secrets:
+      GITHUB_REPO_USERNAME:
+      GITHUB_REPO_PASSWORD:
       ACTIONS_SSH_KEY:
         required: true
       GCP_ACCOUNT_KEY:
+        required: true
+      HELM_REGISTRY_KEY:
         required: true
 
 env:
