--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -61,6 +61,10 @@ on:
         type: string
         required: true
     secrets:
+      GITHUB_REPO_USERNAME:
+        required: true
+      GITHUB_REPO_PASSWORD:
+        required: true
       CC_TEST_REPORTER_ID:
         required: true
       ACTIONS_SSH_KEY:
