--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -319,3 +319,15 @@ jobs:
       - name: Publish OpenAPI spec to readme.io
         run: |
           curl --location --request PUT '${{ inputs.README_URL }}' --header 'x-readme-version: 1.0' --header 'x-readme-source: github' -u '${{ secrets.README_IO_API_KEY }}:' --form 'spec=@target/openapi.json'
+
+      - name: Slack Notification
+        if: ${{ always() }}
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_CHANNEL: "deployments"
+          SLACK_COLOR: ${{ job.status }} # or a specific color like 'green' or '#ff00ff'
+          SLACK_ICON: " https://github.com/rtCamp.png?size=48"
+          SLACK_MESSAGE: ${{ github.event.head_commit.message }}
+          SLACK_TITLE: "Commit_message"
+          SLACK_USERNAME: "GitHub Actions"
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }} 
