--- a/.github/workflows/java-release.yml
+++ b/.github/workflows/java-release.yml
@@ -55,6 +55,8 @@ on:
         default: "master"
         type: string
     secrets:
+      SLACK_WEBHOOK_URL:
+        required: true
       ACTIONS_SSH_KEY:
         required: true
       GCP_ACCOUNT_KEY:
