--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -261,9 +261,9 @@ jobs:
           docker build -t ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:$IMAGE_TAG .
           docker push ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:$IMAGE_TAG
   
-  deploy-staging:
+  deploy:
     if: github.ref == 'refs/heads/master'
-    name: Deploy to staging
+    name: Deploy
     runs-on: ubuntu-20.04
     needs: ["build", "define-vairables"]
     steps:
@@ -310,7 +310,7 @@ jobs:
     if: github.ref == 'refs/heads/master'
     name: Publish documentation to Readme.io
     runs-on: ubuntu-latest
-    needs: [ "deploy-staging" ]
+    needs: [ "deploy" ]
 
     steps:
       - name: Download OpenAPI spec
@@ -323,7 +323,7 @@ jobs:
           curl --location --request PUT '${{ inputs.README_URL }}' --header 'x-readme-version: 1.0' --header 'x-readme-source: github' -u '${{ secrets.README_IO_API_KEY }}:' --form 'spec=@target/openapi.json'
 
       - name: Slack Notification
-        if: ${{ always() }}
+        if: ${{ failure() }}
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_CHANNEL: "deployments"
