--- a/.github/workflows/java-release.yml
+++ b/.github/workflows/java-release.yml
@@ -88,9 +88,39 @@ jobs:
       commit: ${{ steps.commit.outputs.sha_short }}
       version: ${{ steps.version.outputs.VERSION }}
 
-  deploy-production:
+  retag:
+    if:
+    name: Retag Image
+    runs-on: ubuntu-20.04
+    needs: ["define-vairables"]
+    steps:
+      - name: Gcloud Authentication
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json:  ${{ secrets.GCP_ACCOUNT_KEY }}
+
+      - name: Setup gcloud CLI
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          version: '297.0.0'
+
+      - name: Configure the docker credentials   
+        run: |
+          gcloud auth configure-docker --quiet
+
+      - name: Download and retag application Docker image
+        id: retag-image
+        env:
+          IMAGE_TAG: ${{ needs.define-vairables.outputs.commit }}
+          VERSION_TAG: ${{ needs.define-vairables.outputs.version }} 
+        run: |
+          docker pull ${{ inputs.GCR_REGISTRY }}}/${{ inputs.GCR_REPOSITORY }}:${IMAGE_TAG}
+          docker image tag ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${IMAGE_TAG} ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${VERSION_TAG}
+          docker push ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${VERSION_TAG}
+
+  deploy:
     if: github.ref == 'refs/tags/**'
-    name: Deploy to production
+    name: Deploy
     runs-on: ubuntu-20.04
     needs: ["define-vairables"]
     steps:
@@ -115,19 +145,7 @@ jobs:
 
       - name: Configure the docker credentials   
         run: |
-          gcloud auth configure-docker --quiet
           gcloud container clusters get-credentials ${{ inputs.GKE_NAME }} --zone ${{ inputs.GKE_ZONE }} --project ${{ inputs.GKE_PROJECT }}
-
-
-      - name: Download and retag application Docker image
-        id: retag-image
-        env:
-          IMAGE_TAG: ${{ needs.define-vairables.outputs.commit }}
-          VERSION_TAG: ${{ needs.define-vairables.outputs.version }} 
-        run: |
-          docker pull ${{ inputs.GCR_REGISTRY }}}/${{ inputs.GCR_REPOSITORY }}:${IMAGE_TAG}
-          docker image tag ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${IMAGE_TAG} ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${VERSION_TAG}
-          docker push ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${VERSION_TAG}
     
       - name: Deploy to K8S
         env:
@@ -143,7 +161,7 @@ jobs:
           fi
 
       - name: Slack Notification
-        if: ${{ always() }}
+        if: ${{ failure() }}
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_CHANNEL: "deployments"
