fix jons dependencies

--- a/.github/workflows/java-release.yml
+++ b/.github/workflows/java-release.yml
@@ -119,7 +119,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-20.04
-    needs: ["define-vairables"]
+    needs: ["define-vairables", "retag"]
     steps:
       - uses: actions/checkout@v1
 
