--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -84,7 +84,7 @@ env:
 
 jobs:
   formatting:
-    if: github.ref == 'refs/heads/feature/**' || github.ref == 'refs/heads/master'
+    if: github.ref != 'refs/heads/master'
     name: Check code formatting
     runs-on: ubuntu-20.04
 
@@ -105,7 +105,7 @@ jobs:
         run: mvn -B clean spotless:check --settings .github/settings.xml
 
   spotbugs:
-    if: github.ref == 'refs/heads/feature/**' || github.ref == 'refs/heads/master'
+    if: github.ref != 'refs/heads/master'
     name: Check for bugs
     runs-on: ubuntu-20.04
 
@@ -133,7 +133,7 @@ jobs:
           path: target/site/*
 
   test:
-    if: github.ref == 'refs/heads/feature/**' || github.ref == 'refs/heads/master'
+    if: github.ref != 'refs/heads/master'
     name: Run unit & integration tests
     runs-on: ubuntu-20.04
     needs: [formatting, spotbugs]
@@ -198,7 +198,7 @@ jobs:
           path: target/openapi.json
       
   define-vairables:
-    if: github.ref == 'refs/tags/**' || github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
     name: Retrive Variables
     runs-on: ubuntu-20.04
     steps:
