--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -325,6 +325,6 @@ jobs:
           SLACK_COLOR: ${{ job.status }} # or a specific color like 'green' or '#ff00ff'
           SLACK_ICON: " https://github.com/rtCamp.png?size=48"
           SLACK_MESSAGE: ${{ github.event.head_commit.message }}
-          SLACK_TITLE: "Commit_message"
+          SLACK_TITLE: "Commit Message"
           SLACK_USERNAME: "GitHub Actions"
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }} 
