--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -139,13 +139,13 @@ jobs:
           fi
       
       - name: Slack Notification
-        if: ${{ failure() }}
+        if: ${{ always() }}
         uses: rtCamp/action-slack-notify@v2
         env:
           SLACK_CHANNEL: "deployments"
           SLACK_COLOR: ${{ job.status }} # or a specific color like 'green' or '#ff00ff'
           SLACK_ICON: " https://github.com/rtCamp.png?size=48"
           SLACK_MESSAGE: ${{ github.event.head_commit.message }}
-          SLACK_TITLE: "Commit_message"
-          SLACK_USERNAME: "GitHub_Actions"
+          SLACK_TITLE: "Commit Message"
+          SLACK_USERNAME: "GitHub Actions"
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
