--- a/.github/workflows/rollback.yml
+++ b/.github/workflows/rollback.yml
@@ -108,5 +108,5 @@ jobs:
           SLACK_ICON: " https://github.com/rtCamp.png?size=48"
           SLACK_MESSAGE: "Rollback to ${{ inputs.APP_VERSION }} version"
           SLACK_TITLE: "Message"
-          SLACK_USERNAME: "GitHub_Actions"
+          SLACK_USERNAME: "GitHub Actions"
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}  
