--- a/.github/workflows/node-master.yml
+++ b/.github/workflows/node-master.yml
@@ -63,7 +63,7 @@ on:
         required: true
 
 env:
-  GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
   HELM_EXPERIMENTAL_OCI: 1
 
 jobs:
