--- a/.github/workflows/node-master.yml
+++ b/.github/workflows/node-master.yml
@@ -86,7 +86,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     
     - name: "Npm: Lint"
-      if: ! ${{ inputs.TEST_DISABLE_LINT }}
+      if: ! inputs.TEST_DISABLE_LINT 
       run: |
         npm run lint
 
