--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -174,7 +174,7 @@ jobs:
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v3.0.0
         env:
-          CI: "true"
+          CI: true
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
           JACOCO_SOURCE_PATH: "${{ github.workspace }}/src/main/java"
         with:
