--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -155,13 +155,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install postgresql-12
-
-          sql_files=($( ls .docker | tr -s "\n" " " | tr -s " "))
-
-          for file in "${sql_files[@]}";
-          do
-            psql postgresql://postgres@localhost/postgres < .docker/$file
-          done
+          curl .docker/setup-postgres.sh
         env:
           PGPASSWORD: aVeryHardPasswordToGuess
       - name: Cache Maven dependencies
