--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -188,9 +188,11 @@ jobs:
           coverageLocations: ${{ github.workspace }}/target/site/jacoco/jacoco.xml:jacoco
 
       - name: Generate OpenAPI spec
+        if: github.ref == 'refs/heads/master'
         run: mvn post-integration-test -DgenerateOpenApiDocs=true -DskipTests --settings .github/settings.xml
       
       - name: Update API url in OpenAPI spec
+        if: github.ref == 'refs/heads/master'
         uses: jossef/action-set-json-field@v1
         with:
           file: target/openapi.json
@@ -199,6 +201,7 @@ jobs:
           parse_json: true
       
       - name: Upload OpenAPI spec
+        if: github.ref == 'refs/heads/master'
         uses: actions/upload-artifact@v1
         with:
           name: OpenApi spec
