left only lconv file

--- a/.github/workflows/node-master.yml
+++ b/.github/workflows/node-master.yml
@@ -100,6 +100,8 @@ jobs:
         CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
       with:
         coverageCommand: npm run coverage
+        coverageLocations: |
+          ${{github.workspace}}/coverage/lcov.info:lcov
 
   define-vairables:
     if: github.ref == 'refs/heads/master'
