--- a/.github/workflows/node-master.yml
+++ b/.github/workflows/node-master.yml
@@ -99,7 +99,7 @@ jobs:
       env:
         CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
       with:
-        coverageCommand: npm run coverage && ls -l
+        coverageCommand: npm run coverage
         coverageLocations: |
           ${{github.workspace}}/coverage/lcov.info:lcov
 
