--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -349,7 +349,7 @@ jobs:
 
       - name: Publish OpenAPI spec to public readme.io
         uses: readmeio/rdme@7.2.0
-        if: ${{ inputs.PUBLISH_TO_PUBLIC_README == 'true' }}
+        if: inputs.PUBLISH_TO_PUBLIC_README == 'true'
         with:
           rdme: openapi target/openapi.json --key=${{ secrets.README_IO_PUBLIC_API_KEY }} --id=${{ inputs.PUBLIC_API_ID }}
 
