make on of input not required

--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -53,7 +53,7 @@ on:
         required: true
       GATEWAY_URLS:
         type: string
-        required: true
+        required: false
       GITHUB_ORG:
         type: string
         required: true
