--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -88,7 +88,7 @@ on:
       HELM_REGISTRY_KEY:
         required: true
       README_IO_API_KEY:
-        required: true
+        required: false
       README_IO_PUBLIC_API_KEY:
         required: false
 
