--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -53,7 +53,7 @@ on:
         required: true
       GATEWAY_URLS:
         type: string
-        required: true
+        required: false
       GITHUB_ORG:
         type: string
         required: true
@@ -88,7 +88,7 @@ on:
       HELM_REGISTRY_KEY:
         required: true
       README_IO_API_KEY:
-        required: true
+        required: false
       README_IO_PUBLIC_API_KEY:
         required: false
 
@@ -194,12 +194,21 @@ jobs:
           coverageCommand: mvn -B clean verify -Dspotbugs.skip=true --settings .github/settings.xml
           coverageLocations: ${{ github.workspace }}/target/site/jacoco/jacoco.xml:jacoco
 
+      - name: Check if inputs present
+        id: vars
+        run: |
+          if [[ -n "${{ inputs.GATEWAY_URLS }}" ]]; then
+            echo "::set-ouptut name=present::true"
+          else
+            echo "::set-ouptut name=present::false"
+          fi
+
       - name: Generate OpenAPI spec
-        if: contains(github.ref,'master')
+        if: ${{ contains(github.ref, 'master') && steps.vars.outputs.present }}
         run: mvn post-integration-test -DgenerateOpenApiDocs=true -DskipTests --settings .github/settings.xml
       
       - name: Update API url in OpenAPI spec
-        if: contains(github.ref,'master')
+        if: ${{ contains(github.ref, 'master') && steps.vars.outputs.present }}
         uses: jossef/action-set-json-field@v1
         with:
           file: target/openapi.json
@@ -208,7 +217,7 @@ jobs:
           parse_json: true
       
       - name: Upload OpenAPI spec
-        if: contains(github.ref,'master')
+        if: ${{ contains(github.ref, 'master') && steps.vars.outputs.present }}
         uses: actions/upload-artifact@v1
         with:
           name: OpenApi spec
@@ -319,7 +328,7 @@ jobs:
           fi
 
   publish-docs:
-    if: contains(github.ref,'master')
+    if: ${{ contains(github.ref, 'master') && inputs.PUBLISH_TO_INTERNAL_README == 'true' || inputs.PUBLISH_TO_PUBLIC_README == 'true' }}
     name: Publish documentation to Readme.io
     runs-on: ubuntu-latest
     needs: [ "deploy" ]
