--- a/.github/workflows/php-master.yml
+++ b/.github/workflows/php-master.yml
@@ -107,7 +107,7 @@ jobs:
       - name: Setup PHP, with composer and extensions
         uses: shivammathur/setup-php@v2 #https://github.com/shivammathur/setup-php
         with:
-          php-version: '8.0'
+          php-version: ${{ inputs.PHP_VERSION }}
           extensions: mbstring, dom, fileinfo, pgsql
           coverage: xdebug #optional
 
