fix build stage

--- a/.github/workflows/php-master.yml
+++ b/.github/workflows/php-master.yml
@@ -189,7 +189,7 @@ jobs:
         env:
           IMAGE_TAG: ${{ needs.define-variables.outputs.commit }}
         run: |
-          docker build -t $${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${{ inputs.IMAGE_TAG }} -t ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:latest .
+          docker build -t ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${{ inputs.IMAGE_TAG }} -t ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:latest .
           docker push ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:latest
           docker push ${{ inputs.GCR_REGISTRY }}/${{ inputs.GCR_REPOSITORY }}:${{ inputs.IMAGE_TAG }}
 
