--- a/.github/workflows/php-master.yml
+++ b/.github/workflows/php-master.yml
@@ -201,6 +201,16 @@ jobs:
     steps:      
       - uses: actions/checkout@v1
 
+      - name: Gcloud Authentication
+        uses: google-github-actions/auth@v0
+        with:
+          credentials_json:  ${{ secrets.GCP_ACCOUNT_KEY }}
+
+      - name: Setup gcloud CLI
+        uses: google-github-actions/setup-gcloud@v0
+        with:
+          version: '297.0.0'
+
       - uses: actions/checkout@v2
         with:
           repository: '${{ inputs.GITHUB_ORG }}/${{ inputs.HELM_REPOSITORY }}'
