--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -81,6 +81,12 @@ on:
       SPOTLESS_CHECK_MVN_ARGS:
         type: string
         default: "-B site --settings .github/settings.xml"
+      TESTS_MVN_ARGS:
+        type: string
+        default: "-B clean package -DskipTests -Dspotbugs.skip=true --settings .github/settings.xml"
+      ENABLE_INTEGRATION_TESTS:
+        type: string
+        default: "true"
     secrets:
       SLACK_WEBHOOK_URL:
         required: true
@@ -172,7 +178,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      
       - name: Setup database
+        if: ${{ inputs.ENABLE_INTEGRATION_TESTS == 'true' }}
         working-directory: .docker
         run: |
           sudo apt-get update
@@ -180,6 +188,7 @@ jobs:
           bash setup-postgres.sh
         env:
           PGPASSWORD: aVeryHardPasswordToGuess
+     
       - name: Cache Maven dependencies
         uses: actions/cache@v2
         env:
@@ -187,12 +196,15 @@ jobs:
         with:
           path: ~/.m2
           key: ${{ runner.os }}-test-${{ env.cache-name }}-${{ hashFiles('pom.xml') }}
+      
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
           java-version: ${{ inputs.JAVA_VERSION }}
+      
       - name: Maven Package
-        run: mvn -B clean package -DskipTests -Dspotbugs.skip=true --settings .github/settings.xml
+        run: mvn ${{ inputs.TESTS_MVN_ARGS }}
+      
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v3.0.0
         env:
