--- a/.github/workflows/java-master.yml
+++ b/.github/workflows/java-master.yml
@@ -84,7 +84,7 @@ on:
       TESTS_MVN_ARGS:
         type: string
         default: "-B clean package -DskipTests -Dspotbugs.skip=true --settings .github/settings.xml"
-      ENABLE_INTEGRATION_TESTS:
+      ENABLE_PG_SETUP:
         type: string
         default: "true"
     secrets:
@@ -180,7 +180,7 @@ jobs:
       - uses: actions/checkout@v1
       
       - name: Setup database
-        if: ${{ inputs.ENABLE_INTEGRATION_TESTS == 'true' }}
+        if: ${{ inputs.ENABLE_PG_SETUP == 'true' }}
         working-directory: .docker
         run: |
           sudo apt-get update
